 * if the detection fails OR if you installed a proper wmvcore.dll file and want to use it, you can add a "WineCompatibility=0/1" entry in the kMule.ini file
+ added button to edit kMule.ini to extended options page [WiZaRd]
~ changed splashscreen to splashscreenex [WiZaRd - original by TBH]
~ added ipfilter progress to splash [WiZaRd - original by JvA (X-Ray)]
+ added option to automatically extract supported archive files [Tuxman/WiZaRd]
~ unified messages & security tabs in options [WiZaRd]
~ removed shared dirs from options [WiZaRd]
 * using the shared files tab offers way more functionality!
~ added "titanmule" to GPL breakers string list [WiZaRd]

20130601:
> updated miniupnplib support to v1.8 (11/02/2013) [Tuxman/WiZaRd]
+ kMule will now offer to restart itself if necessary [WiZaRd]
! fixed minimule ratio icon when uploading only [WiZaRd]
~ renaming a shared file keeps the original file extension now [Tuxman]
! fixed a possible crash when trying to retrieve proxy settings from OS - thx to dylandog84 [WiZaRd]
~ added a couple of ED2KFileTypes [Tuxman/WiZaRd]
+ NeoLoader detection by David Xanatos [Tuxman]
~ avoid debug-related function overhead [Tuxman - original by YumeYao]
~ prevent detecting VBR .mp3 files as "fake" [WiZaRd]
+ added modicon.dll support [WiZaRd]
! fixed "apply" button in files options - thx to dylandog84 [WiZaRd]
+ added kMule ul/dl stats [WiZaRd]
+ added kMule client icon [WiZaRd]
~ replaced SevenZip++ by 7z console code to allow extraction of non-7z/zip archives [WiZaRd]

20130705:
! fixed missing "Translated by" label - thx to THOR [WiZaRd]
! fixed wrong client icons - thx to SS1900 [WiZaRd]
! fixed (wrong) disabled 7z controls [WiZaRd]
~ added .apk support [Tuxman]
! fixed possibly buffer overflow in statistics - thx to RejZoR [WiZaRd]
! switched "compatible" and "default" client icons [WiZaRd]
! fixed crash on automatic extraction - thx to satanius [WiZaRd]

XXXXYYZZ: